# InsightDF

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py
src/insightdf/: __init__.py  analytics.py  chart_recommender.py  config.py  data_loader.py  errors.py  insights.py  llm.py  plot_guard.py  query_models.py  question_guard.py  schema.py  sql_guard.py  time_series.py
tests/: test_analytics_sql_repair.py  test_chart_recommender.py  test_insights.py  test_llm_parsing.py  test_question_guard.py  test_sql_guard.py
